"botão para logout"

--- a/Curriculo/src/app/app.component.html
+++ b/Curriculo/src/app/app.component.html
@@ -3,6 +3,7 @@
   <a routerLink="info-general">Info-gerais</a>
   <a routerLink="main-page">Professionals</a>
   <a routerLink="create-user">Create User</a>
+  <button (click)="logout">Sair</button>
 </header>
 
 <main>
