--- a/Curriculo/src/app/app.component.css
+++ b/Curriculo/src/app/app.component.css
@@ -12,6 +12,12 @@ a {
   text-decoration: none;
 }
 
+button {
+  color: inherit;
+  text-decoration: none;
+  background-color:transparent;
+}
+
 .ativo {
   display: none;
 }
