--- a/Curriculo/src/app/app.component.html
+++ b/Curriculo/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <a routerLink="login">Login</a>
-  <a routerLink="info-general">Info-gerais</a>
-  <a routerLink="main-page">Professionals</a>
+  <!-- <a routerLink="info-general">Info-gerais</a> -->
+  <a routerLink="list-user">Professionals</a>
   <a routerLink="create-user">Create User</a>
 </header>
 
