Implementation list and update create component

--- a/Curriculo/src/app/components/create-user/create-user.component.html
+++ b/Curriculo/src/app/components/create-user/create-user.component.html
@@ -217,6 +217,7 @@
     </div>
     <div class="button-wrapper">
       <button class="btn" (click)="CreateUserForm($event)">Create</button>
+      <button class="btn" (click)="CancelUserForm()">Cancel</button>
     </div>
 
     <br /><br />
