implementation edit forms and some validators in forms

--- a/Curriculo/src/app/components/create-user/create-user.component.html
+++ b/Curriculo/src/app/components/create-user/create-user.component.html
@@ -46,6 +46,7 @@
           id="cpf"
           placeholder="Type your CPF..."
           formControlName="cpf"
+          mask="000.000.000-00"
         />
       </div>
       <div class="form-field">
@@ -56,6 +57,7 @@
           id="zipCode"
           placeholder="Type your CEP..."
           formControlName="zipCode"
+          mask="00000-000"
         />
       </div>
       <div class="form-field">
@@ -96,6 +98,7 @@
           id="phone"
           placeholder="Type your phone..."
           formControlName="phone"
+          mask="(00) 0 0000-0000"
         />
       </div>
     </div>
