--- a/Curriculo/src/app/components/footer/footer.component.html
+++ b/Curriculo/src/app/components/footer/footer.component.html
@@ -1,10 +1,13 @@
 <div class="foot">
   <h3>{{ footer.info }}</h3>
-  <ul>
-    <li *ngFor="let icon of footer.socialMedia">
-      <mat-icon>{{ icon.icon }}</mat-icon>
-    </li>
-  </ul>
+  <figure class="icon-social-media">
+    <img src="../../../assets/images/icon-facebook.png" />
+    <img src="../../../assets/images/icon-instagram.png" />
+    <img src="../../../assets/images/icon-linkedin.png" />
+    <img src="../../../assets/images/icon-snapchat.png" />
+    <img src="../../../assets/images/icon-twitter.png" />
+    <img src="../../../assets/images/icon-whatsapp.png" />
+  </figure>
 
   <h3>
     {{ footer.developed.text }}
