--- a/Curriculo/src/app/app.component.css
+++ b/Curriculo/src/app/app.component.css
@@ -1,15 +1,23 @@
 header {
   background-color: var(--primary);
+  height: 10vh;
   padding: 10px;
   color: white;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1.2em;
 }
 
 
-a {
+a{
   color: inherit;
   text-decoration: none;
+}
+
+a:hover{
+  cursor: pointer;
+  font-weight: 500;
 }
 
 .ativo {
@@ -19,4 +27,13 @@ a {
 main {
   background-color: #fcfcfc;
   padding: var(--padding);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+@media(max-width: 700px) and (min-width: 360px){
+  header {
+    font-size: 1em;
+  }
 }
