--- a/Curriculo/src/app/components/footer/footer.component.css
+++ b/Curriculo/src/app/components/footer/footer.component.css
@@ -1,8 +1,9 @@
 :host .foot {
   min-width: 100%;
+  height: 24vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   position: relative;
   margin-top: 16px;
@@ -13,14 +14,14 @@
 :host h3 {
   color: #fff;
   font-weight: 400;
-  font-size: 15px;
-  padding: 16px 0;
+  font-size: 1em;
+  padding: 16px;
 }
 :host .foot ul {
   display: flex;
   list-style-type: none;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 1em;
 }
 
 :host .foot__link {
@@ -28,12 +29,35 @@
   color: #fff;
 }
 
-:host mat-icon{
-  font-size: 24px;
-  color: #fff;
-}
-
 .icon-social-media img{
   width: 3vw;
   height: 6vh;
+}
+
+@media(max-width: 700px) and (min-width: 360px){
+  /* :host .foot {
+    min-width: 100%;
+    height: 24vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    margin-top: 16px;
+    bottom: 0;
+    background-color: #009688;
+  } */
+
+  :host h3 {
+    font-size: 1.2em;
+  }
+  :host .foot ul {
+    font-size: 1.2em;
+  }
+
+  .icon-social-media img{
+    width: 8vw;
+    height: 6vh;
+  }
+
 }
