--- a/Curriculo/src/app/components/login/login.component.scss
+++ b/Curriculo/src/app/components/login/login.component.scss
@@ -1,63 +1,80 @@
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+@mixin display-pattern{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-main{
-    
-}
 .container{
-    width: 100vw;
-    height: 65vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    padding-top: 5vh;
+  width: 100%;
+  height: 70vh;
+  @include display-pattern();
+  margin: auto;
 }
 
 form{
-    width: 100%;
-    height: 45vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+  width: 100%;
+  height: 50vh;
+  @include display-pattern();
 }
 
 .form-field{
-    width: 30vw;
-    height: 10vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  width: 30vw;
+  height: 14vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  font-size: 1.1em;
 }
 
 input{
-    border-radius: 10px;
-    height: 5vh;
-    border: none;
-    background-color: #e9ecef;
-
+  border-radius: 10px;
+  height: 7vh;
+  border: none;
+  background-color: #e9ecef;
 }
 
 input::placeholder{
-    padding-left: 2vw;
+  padding-left: 2vw;
 }
 
 button{
-    border: solid 2px #009688;
-    height: 4vh;
-    width: 12vw;
-
+  border: solid 2px #009688;
+  height: 6vh;
+  width: 12vw;
+  font-size: 1.2em;
 }
 
 button:hover{
-    background-color: #009688;
-    color:white;
+  background-color: #009688;
+  color:white;
 }
 
 .form__title{
+  color:#009688;
+  font-size: 2.5em;
+}
+
+@media(max-width: 700px) and (min-width: 360px){
+  form{
+    margin-top: -3vh;
+  }
+
+  .form-field{
+    width: 80vw;
+    height: 16vh;
+    font-size: 1.3em;
+  }
+
+  button{
+    height: 7vh;
+    width: 30vw;
+    font-size: 1.4em;
+    margin-top: 4vh;
+  }
+
+  .form__title{
     color:#009688;
+    font-size: 2.5em;
+  }
 }
