--- a/Curriculo/src/styles.css
+++ b/Curriculo/src/styles.css
@@ -30,13 +30,16 @@ a{
 
 *{
   font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.container {
+/* .container {
   max-width: 400px;
   padding: 30px;
   margin: auto;
-}
+} */
 
 
 @media screen and (min-width: 601px)  {
