--- a/Curriculo/src/app/components/list-user/list-user.component.html
+++ b/Curriculo/src/app/components/list-user/list-user.component.html
@@ -1,7 +1,6 @@
 <section class="container">
   <header class="header d-flex">
-    <h2 class="ff-inter col-md-12">Users</h2>
-    <!-- <button routerLink ="/createUpdateCup" class="button">Add cup</button> -->
+    <h2 class="title ff-inter col-md-12">Users</h2>
   </header>
 
   <div class="mural" *ngIf="listUser.length > 0; else withoutUser">
