--- a/Curriculo/src/app/app.component.html
+++ b/Curriculo/src/app/app.component.html
@@ -3,7 +3,7 @@
   <!-- <a routerLink="info-general">Info-gerais</a> -->
   <a routerLink="list-user">Professionals</a>
   <a routerLink="create-user">Create User</a>
-  <a routerLink="contact">Contact</a>
+  <!-- <a routerLink="contact">Contact</a> -->
 </header>
 
 <main>
