--- a/Curriculo/src/app/components/user/user.component.css
+++ b/Curriculo/src/app/components/user/user.component.css
@@ -12,7 +12,7 @@
 }
 
 .skills{
-  margin-top: 5vh;
+  margin-top: 6vh;
 }
 
 .languages{
@@ -22,18 +22,22 @@
 
 .img_perfil{
   position: relative;
-  width: 27vw;
-  height: 65vh;
-}
+  width: 30vw;
+  height: 60vh;
+} 
+
 .img_perfil img{
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
 }
 
 .img_perfil h2{
   position: absolute;
-  bottom: 10px;
+  color: #ffff;
+  text-shadow: black 0.1em 0.1em 0.2em;
   padding-left: 1vw;
+  top: 52vh;
 }
 
 .items{
@@ -41,14 +45,17 @@
   flex-direction: row;
   align-items: center;
   width: 30vw;
-  margin-top: 1.5vh;
-
+  margin-top: 2vh;
 }
 h3{
-  padding-left: 2vw;
+  width: 100%;
+  height: 5vh;
+  padding-left: 1vw;
   font-weight: 500;
-  font-size: 15pt;
-  color: #666666
+  font-size: 1.3em;
+  color: #343a40;
+  margin: auto;
+  margin-top: 1vh;
 }
 
 span{
@@ -102,28 +109,30 @@ p{
 }
 
 .actions {
+  height: 15vh;
   display: flex;
-  justify-content: flex-end
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.button-delete {
+.button-delete, .button-edit{
+  width: 5vw;
+  height: 10vh;
   border: none;
-  cursor: pointer;
-  margin-left: 5px;
-  margin-top: 10px;
+  background-color: #ffff;
+  margin-bottom: 5vh;
 }
-
-.button-edit {
-  border: none;
+.button-delete:hover{
+  border: solid #009688;
+  border-radius: 50px;
   cursor: pointer;
-  margin-right: 10px;
-  margin-top: 10px;
 }
-
+.button-edit:hover{
+  border: solid #009688;
+  border-radius: 50px;
+}
 
 @media(max-width: 700px) and (min-width: 360px) {
-
-
   .containerSection{
     width: 100%;
     flex-direction: column;
@@ -136,15 +145,13 @@ p{
   }
 
   .img_perfil img{
-      width: 100%;
+      width: 90%;
       height: 100%;
-
   }
 
   .img_perfil h2{
-    position: absolute;
-    bottom: 10px;
     padding-left: 1vw;
+    top: 44vh;
   }
 
   .items{
@@ -181,4 +188,8 @@ p{
     border-radius: 10px;
   }
 
+  .button-delete, .button-edit{
+    width: 15vw;
+    height: 10vh;
+  }
 }
