fix: fix update styles in delete-user and list-user

--- a/Curriculo/src/app/components/delete-user/delete-user.component.html
+++ b/Curriculo/src/app/components/delete-user/delete-user.component.html
@@ -1,7 +1,13 @@
 <section class="container ff-inter delete-user">
-  <p>The user will be deleted. Do you confirm?</p>
-  <div class="action">
-    <button class="button button-delete" (click)="deleteUser()">Delete</button>
-    <button class="button button-cancel" (click)="cancelUser()">Cancel</button>
-  </div>
+    <div class="action">
+      <p>The user will be deleted. Do you confirm?</p>
+      <div>
+        <button class="button button-delete" (click)="deleteUser()">
+          Delete
+        </button>
+        <button class="button button-cancel" (click)="cancelUser()">
+          Cancel
+        </button>
+      </div>
+    </div>
 </section>
