--- a/Curriculo/src/app/components/delete-user/delete-user.component.css
+++ b/Curriculo/src/app/components/delete-user/delete-user.component.css
@@ -1,9 +1,8 @@
 .action {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
-  align-content: center;
-  margin-top: 30px;
 }
 
 .button {
@@ -17,6 +16,9 @@
   cursor: pointer;
   margin-right: 10px;
   margin-top: 10px;
+  font-weight: bold;
+  color: green;
+  font-size: large;
 }
 
 .button-delete {
@@ -24,10 +26,17 @@
   cursor: pointer;
   margin-left: 5px;
   margin-top: 10px;
+  color: red;
+  font-size: large;
 }
 
 .delete-user {
-  padding: 10rem 0;
+  padding: 8.75rem 0;
+}
+
+.action p {
+  font-size: large;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 548px) {
