--- a/Curriculo/src/app/components/edit-user/edit-user.component.html
+++ b/Curriculo/src/app/components/edit-user/edit-user.component.html
@@ -203,9 +203,9 @@
       </div>
     </div>
     <div class="button-wrapper">
-      <button class="btn" (click)="ResetForm()">Clean</button>
-      <button class="btn" (click)="EditUserForm($event)">Edit</button>
-      <button class="btn" (click)="CancelUserForm()">Cancel</button>
+      <button class="btn2" (click)="ResetForm()">Clean</button>
+      <button class="btn2" (click)="EditUserForm($event)">Edit</button>
+      <button class="btn2" (click)="CancelUserForm()">Cancel</button>
     </div>
 
     <br /><br />
