feat: create header

--- a/Curriculo/src/app/app.component.html
+++ b/Curriculo/src/app/app.component.html
@@ -1,10 +1,4 @@
-<header>
-  <a routerLink="login">Login</a>
-  <!-- <a routerLink="info-general">Info-gerais</a> -->
-  <a routerLink="list-user">Professionals</a>
-  <a routerLink="create-user">Create User</a>
-  <!-- <a routerLink="contact">Contact</a> -->
-</header>
+<app-header></app-header>
 
 <main>
   <router-outlet></router-outlet>
