--- a/Curriculo/src/app/components/create-user/create-user.component.html
+++ b/Curriculo/src/app/components/create-user/create-user.component.html
@@ -57,7 +57,7 @@
           class="form-field__input"
           type="text"
           id="zipCode"
-          placeholder="Type your CEP..."
+          placeholder="Type your zip code..."
           formControlName="zipCode"
           mask="00000-000"
           (blur)="searchFormCep()"
