Implementation Edit Via cep

--- a/Curriculo/src/app/components/create-user/create-user.component.html
+++ b/Curriculo/src/app/components/create-user/create-user.component.html
@@ -60,7 +60,7 @@
           placeholder="Type your zip code..."
           formControlName="zipCode"
           mask="00000-000"
-          (blur)="searchFormCep()"
+          (blur)="searchFormCep($event.target)"
         />
       </div>
       <div class="form-field">
