feat: update header login and logout, set and get in localStorage

--- a/Curriculo/src/app/header/header.component.html
+++ b/Curriculo/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
-  <a routerLink="login">Login</a>
+  <a *ngIf="!loggedUser" routerLink="login">Login</a>
   <a routerLink="list-user">Professionals</a>
   <a routerLink="create-user">Create User</a>
-  <a routerLink="login">Logout</a>
+  <a *ngIf="loggedUser" (click)="logout()" routerLink="login">Logout</a>
 </header>
