--- a/Curriculo/src/app/components/create-user/create-user.component.html
+++ b/Curriculo/src/app/components/create-user/create-user.component.html
@@ -10,6 +10,7 @@
         (change)="previewFile($event)"
       /><br />
       <img
+        class="img-default"
         id="img__preview"
         [src]="
           imgSrc != null ? imgSrc : '../../../assets/images/no-image_local.png'
